# web-scraper

./: .gitignore  CHANGELOG.md  DONE.md  LICENSE  README.md  README_de.md  RELEASE_GATE.md  SECURITY.md  TODO.md  WIRING.md  ellmos-module.json  ellmos-module.v2.json  llms.txt  pyproject.toml
tests/: test_web_scraper.py
web_scraper/: __init__.py  core.py
